Updated package version.

--- a/EmbeddedHTTP/EmbeddedHTTP.csproj
+++ b/EmbeddedHTTP/EmbeddedHTTP.csproj
@@ -12,6 +12,7 @@
     <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
     <PackageIcon>Icon.png</PackageIcon>
     <PackageIconUrl />
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
